bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: not found: value abs
  if ( abs(n-100) <= 10){return true}
       ^NearHundred:3: error: not found: value abs
  else if (abs(n-200) <=10 ){return true}
           ^