bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if ( abs(n-100) <= 10){return true}
  else if (abs(n-200) <=10 ){return true}
  
  return false
  
  
  
}